      tree walking, and modular directory listing code to aid future
      performance optimisations and refactoring. (Robert Collins)

    * New method ``RevisionSpec.as_tree`` for representing the revision
      specifier as a revision tree object. (Lukáš Lalinský)

    * New win32utils.get_local_appdata_location() provides access to a local
      directory for storing data.  (Mark Hammond)

    * The Repository model has been extended to allow some formats to
      expose data via CHK based lookups (Though no formats support this as
      yet). (Robert Collins)


bzr 1.7 2008-09-23
------------------

This release includes many bug fixes and a few performance and feature
improvements.  ``bzr rm`` will now scan for missing files and remove them,
like how ``bzr add`` scans for unknown files and adds them. A bit more
polish has been applied to the stacking code. The b-tree indexing code has
been brought in, with an eye on using it in a future repository format.
There are only minor installer changes since bzr-1.7rc2.

  FEATURES

    * Some small updates to the win32 installer. Include localization
      files found in plugins, and include the builtin distutils as part of
      packaging qbzr. (Mark Hammond)


bzr 1.7rc2 2008-09-17
---------------------

A few bug fixes from 1.7rc1. The biggest change is a new
``RemoteBranch.get_stacked_on_url`` rpc. This allows clients that are
trying to access a Stacked branch over the smart protocol, to properly
connect to the stacked-on location.

  BUG FIXES:

    * Branching from a shared repository on a smart server into a new
      repository now preserves the repository format.
      (Andrew Bennetts, #269214)

   * Branching from a stacked branch via ``bzr+ssh`` can properly connect
     to the stacked-on branch.  (Martin Pool, #261315)

    * ``bzr init`` no longer re-opens the BzrDir multiple times.
      (Vincent Ladeuil)

    * Fix '_in_buffer' AttributeError when using the -Dhpss debug flag.
      (Andrew Bennetts)

